[package]
name = "async-tls-lite-demo-smol"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
async-tls-lite = { path = "../..", version = "0.1" }
smol = "0.1.18"
futures = "0.3.5"
async-channel = "1.1.1"
